<resources>
    <string name="app_name">Portals</string>

    <!-- Menu -->
    <string name="playGame">Play game</string>
    <string name="playGameVsComputer">Play vs computer AI</string>
    <string name="settings">Settings</string>
    <string name="preferences">Preferences</string>
    <string name="update">Update</string>
    <string name="connect">Connect</string>
    <string name="exit">Exit</string>

    <!-- Settings -->
    <string name="music">Music</string>
    <string name="music_off">Music: off</string>
    <string name="music_on">Music: on</string>
    <string name="sounds">Sounds</string>
    <string name="sounds_off">Sounds: off</string>
    <string name="sounds_on">Sounds: on</string>
    <string name="language">Language</string>
    <string name="language_greek">Greek</string>
    <string name="language_english">English</string>
    <string name="question_timeout">Answer time</string>
    <string name="back">Back</string>

    <!-- Preferences -->
    <string name="category">Category</string>
    <string-array name="categories">
        <item name="mathematics">Mathematics</item>
        <item name="geography">Geography</item>
        <item name="history">History</item>
    </string-array>
    <string name="grade">Grade</string>
    <string-array name="grades">
        <item name="1st grade">1st grade</item>
        <item name="2nd grade">2nd grade</item>
        <item name="3rd grade">3rd grade</item>
        <item name="4th grade">4th grade</item>
        <item name="5th grade">5th grade</item>
        <item name="6th grade">6th grade</item>
    </string-array>

    <!-- Connect -->
    <string name="login">Login</string>
    <string name="register">Register</string>

    <!-- Game -->
    <string name="play">Play</string>
    <string name="board">Board</string>
    <string name="avatar">Avatar</string>
    <string name="dice">Dice</string>

    <!-- Victory Screen -->
    <string name="question">No. questions:</string>
    <string name="answer">No. correct answers:</string>
    <string name="portal">No. portals taken:</string>
    <string name="free_tile">No. free tiles stepped:</string>
    <string name="returnToMainMenu">Return to Main Menu</string>

    <!-- Miscellaneous -->
    <string name="ERROR_field_required">This field is required</string>
    <string name="ERROR_backPressedOnQuestionDialog">You haven\'t answered yet</string>
    <string name="TODO_VsComputer">Play VS Computer is not implemented yet.</string>
    <string name="TODO_Update">Update is not implemented yet.</string>
    <string name="TODO_Connect">Login/register not implemented yet.</string>
    <string name="TEXT_exit">Tap again to exit</string>
    <string name="TEXT_victory">Victory!!</string>
    <string name="TEXT_correctAnswer">You answered correct!!</string>
    <string name="TEXT_wrongAnswer">You answered wrong!!</string>
    <string name="TEXT_freeTile">Hooray!! No questions on this tile!!</string>
    <string name="TEXT_portal">You will go through a portal on your next question</string>
</resources>
