<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_marginEnd="10dp"
              android:layout_marginStart="10dp"
              android:gravity="center_horizontal"
              tools:context="com.ian.portals.activities.Settings"
              android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="5dp"
        android:background="@color/black" />

    <ToggleButton
        android:id="@+id/music"
        android:background="@color/colorComponent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:checked="true"
        android:onClick="musicOnClickEvent"
        android:text="@string/music"
        android:textOff="@string/music_off"
        android:textOn="@string/music_on" />

    <ToggleButton
        android:id="@+id/sounds"
        android:background="@color/colorComponent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:checked="true"
        android:onClick="soundsOnClickEvent"
        android:text="@string/sounds"
        android:textOff="@string/sounds_off"
        android:textOn="@string/sounds_on" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="10dp"
        android:background="@color/black" />

    <TextView
        android:id="@+id/language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/language"
        android:textColor="@color/colorLabelText"
        android:textSize="20sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="5dp"
        android:background="@color/white" />

    <RadioGroup
        android:id="@+id/languageRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp">

        <RadioButton
            android:id="@+id/language_english"
            android:background="@color/colorComponent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="languageEnglishOnClickEvent"
            android:text="@string/language_english" />

        <RadioButton
            android:id="@+id/language_greek"
            android:background="@color/colorComponent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:onClick="languageGreekOnClickEvent"
            android:text="@string/language_greek" />
    </RadioGroup>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="10dp"
        android:background="@color/black" />

    <Button
        android:id="@+id/back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:onClick="backOnClickEvent"
        android:text="@string/back"/>

</LinearLayout>
