<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="com.ian.portals.activities.Game">

    <ImageView
        android:id="@+id/game"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/separation_line"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/board"/>

    <View
        android:id="@+id/separation_line"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_above="@+id/play"
        android:layout_marginBottom="2dp"
        android:layout_marginTop="2dp"
        android:background="@color/black"/>

    <ImageButton
        android:id="@+id/play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="#000000"
        android:contentDescription="@string/playGame"
        android:onClick="playOnClickEvent"
        app:srcCompat="@drawable/play_button"/>

    <ImageView
        android:id="@+id/dice"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_below="@+id/separation_line"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/dice"/>

</RelativeLayout>