<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginEnd="10dp"
    android:layout_marginStart="10dp"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.ian.portals.activities.VictoryScreen">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:textSize="35sp"
        android:textColor="@color/red"
        android:text="Victory"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:background="@color/black"/>

    <LinearLayout
        android:id="@+id/question_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/number_of_questions_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/colorLabelText"
            android:layout_weight="1"
            android:text="@string/question"/>

        <TextView
            android:id="@+id/number_of_questions"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/colorLabelText"
            android:layout_weight="1"
            android:text="15"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/black"/>

    <LinearLayout
        android:id="@+id/correct_answer_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/number_of_correct_answers_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/colorLabelText"
            android:layout_weight="1"
            android:text="@string/answer"/>

        <TextView
            android:id="@+id/number_of_correct_answers"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/colorLabelText"
            android:layout_weight="1"
            android:text="10"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/black"/>

    <LinearLayout
        android:id="@+id/portal_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/number_of_portals_used_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/colorLabelText"
            android:layout_weight="1"
            android:text="@string/portal"/>

        <TextView
            android:id="@+id/number_of_portals_used"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/colorLabelText"
            android:layout_weight="1"
            android:text="2"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/black"/>

    <LinearLayout
        android:id="@+id/free_tile_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/number_of_free_tiles_stepped_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/colorLabelText"
            android:layout_weight="1"
            android:text="@string/free_tile"/>

        <TextView
            android:id="@+id/number_of_free_tiles_stepped"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/colorLabelText"
            android:layout_weight="1"
            android:text="3"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/black"/>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1">

    </FrameLayout>

    <Button
        android:id="@+id/return_to_main_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:onClick="returnOnClickEvent"
        android:text="@string/returnToMainMenu"/>
</LinearLayout>
